Picture adder now only adds pictures that are not to big in resolution / size(bytes)
Found bug in previwer on Windows and possibly on Linux: black background is not set
Improved previewer: bigger and black background
Fixed minor bug in resizer where the upper handler wouldn't follow the mousemovements correctly
Resizer now uses handlers which can be dragged by the mouse to resize the picture
Using JLabels to hold images instead of JButtons. This dramaticly improves drawing speeds in the UI and editors
Fixed bug in Previewer where on some platforms (Windows and Linux) the picture would flicker all the time
Improved memory usage of thge previewer and the picture editors
When editing, the currently showing picture is used, not the picture selected in the tree
When selecting a picture in the tree, JCpg is also exiting mega explorer view
Started the development of a menu from where all the API functions can be accessed
Fixed a minor bug in the previewer where the threads were not shut down when closing the previewer
Improved the refreshing after a picture was edited
Removed some temporary sync code like the generation of SQL statements
Sessionkey is now also stored in the user configuration
Did complete API transition. JCpg now only used the Cpg API
Changed some php communicator code to use Nitin's webapi in the near future
Fixed some Nullpointer exceptions in the temp login code
Deselect tree selections when a picture is selected from the (mega)list
JCpg now does a correct calculation of the directory in which the user's photo's are stored: 10000 + user_id
Did some changes to the crop editor code. The crop selection rectangle is now controlable by the mouse
Fixed nullpointer exception in the temporary syncing code